--- a/css/profileCSS.css
+++ b/css/profileCSS.css
@@ -1,70 +1,79 @@
-
-
-  
-body{
-	
-	background-color: #dee1dd;
-	font-family: Tahoma, sans-serif;
-	
+body {
+    background-color: #dee1dd;
+    font-family: Tahoma, sans-serif;
 }
 
-        /* Container styles */
+/* Container styles */
 .container {
-            display: flex;
-            flex-direction: column;
-        }
+    display: flex;
+    flex-direction: column;
+}
 
-        /* Top bar styles */
-        .top-bar {
-            background-color: #a1aa9b;
-            height: 67px;
-            width: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            color: #333;
-            padding: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            
-        }
+/* Top bar styles */
+.top-bar {
+    background-color: #a1aa9b;
+    height: 67px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    color: #333;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-        /* Sidebar styles */
-        .sidebar {
-            width: 10%;
-            min-width: 50px;
-            max-width: 80px;
-            height: 100vh;
-            background-color: #a1aa9b;
-            position: fixed;
-            top: 86px;
-            left: 0;
-        }
+/* Sidebar styles */
+.sidebar {
+    width: 10%;
+    min-width: 50px;
+    max-width: 80px;
+    height: 100vh;
+    background-color: #a1aa9b;
+    position: fixed;
+    top: 86px;
+    left: 0;
+}
 
-        /* Main section styles */
-        .main {
-            background-color: #dee1dd;
-            height: 2000px; /* Just for demonstration */
-            margin-left: 50px;
-            padding: 10px;
-            
-        }
+/* Main section styles */
+.main {
+    background-color: #dee1dd;
+    height: 2000px; /* Just for demonstration */
+    margin-top: 80px;
+    margin-left: 80px; /* Adjusted the margin to the width of the sidebar */
+    padding: 10px;
+}
 
-        /* Logo styles */
-        .logo {
-            display: flex;
-            align-items: center;
-        }
+/* Logo styles */
+.logo {
+    display: flex;
+    align-items: center;
+}
 
-        /* Logo image styles */
-        .logo img {
-	       height: 100px;
-	       width: 160px;
-	       margin-right: 10px;
-        } 
+/* Logo image styles */
+.logo img {
+    height: 100px;
+    width: 200px;
+    margin-right: 10px;
+}
 
-        /* Sign Up/Log In styles */
-        .sign-up-log-in {
-            display: flex;
-        }
+/* Sign Up/Log In styles */
+.sign-up-log-in {
+    display: flex;
+    margin-left: 50px; /* Adjust the left margin */
+}
+
+.sign-up-log-in button {
+    margin-right: 10px; /* Adjust the space between buttons */
+}
+
+#search-popup {
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    background: #dee1dd;
+    border: 1px solid #ccc;
+    padding: 10px;
+}
