--- a/css/Home.css
+++ b/css/Home.css
@@ -3,13 +3,13 @@
 	padding: 20px;
 }
   
-/* Logo styles */
+
 .logo {
 	display: flex;
 	align-items: center;
 }
 
-/* Logo image styles */
+
 .logo img {
 	height: 100px;
 	width: 160px;
@@ -146,7 +146,7 @@ body{
 
 .welcome-msg .image-container img {
     max-width: 100%;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-left: 50px;
     width: 500px;
     height: 300px;
@@ -160,9 +160,9 @@ body{
 }
 
 .welcome-msg h1 {
-    font-size: 30px; /* Adjust the font size as needed */
-    margin-top: -300px; /* Adjust the top margin as needed */
-    margin-left: 50px; /* Adjust the left margin to position it to the right of the second image */
+    font-size: 30px; 
+    margin-top: -300px; 
+    margin-left: 50px; 
 }
 .welcome-msg .signup-p {
     max-width: 500px;
@@ -177,11 +177,75 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #ffffff;
-    padding: 20px;
+    
+    padding-top: 310px;
+    padding-bottom: 10px;
     border: 1px solid #000000;
     z-index: 2;
+    width: 80%;
+    max-width: 500px;
+    
+    overflow: auto;
 }
 
 .popup-content {
+    position: relative; 
     text-align: center;
 }
+.popup-content h1:nth-child(2){
+    text-align: left!important;
+}
+form {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+/* Style for form fields */
+form label {
+    text-align: left;
+    display: block;
+    margin-top: 10px;
+}
+
+form input,
+form select,
+form button {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+}
+
+form button {
+    background-color: #889480;
+    color: white;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #666;
+}
+.close-button {
+    position: absolute;
+    top: -10px;
+    right: 10px;
+    font-size: 24px; /* Adjust the font size as needed */
+    cursor: pointer;
+}
+
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
+}
+
