--- a/css/Home.css
+++ b/css/Home.css
@@ -231,7 +231,7 @@ form button:hover {
     position: absolute;
     top: -10px;
     right: 10px;
-    font-size: 24px; /* Adjust the font size as needed */
+    font-size: 24px; 
     cursor: pointer;
 }
 
