--- a/css/profileCSS.css
+++ b/css/profileCSS.css
@@ -77,3 +77,36 @@ body {
     border: 1px solid #ccc;
     padding: 10px;
 }
+#drop-area {
+            display: none;
+            border: 2px dashed #ccc;
+            border-radius: 8px;
+            padding: 20px;
+            text-align: center;
+            margin: 20px;
+        }
+
+        #drop-area.highlight {
+            border-color: #2185d0;
+        }
+
+        .image-row {
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+
+        .image-item {
+            margin: 5px;
+            text-align: center;
+            flex: 0 0 23%;
+        }
+
+        img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+
+        .image-caption {
+            margin-top: 5px;
+        }
